--- a/app/views/shoes/index.html.erb
+++ b/app/views/shoes/index.html.erb
@@ -5,7 +5,7 @@
   <% @shoes.each do |shoe| %>
     <%= link_to shoe_path(shoe), class: "text-decoration-none" do %>
       <div class="card-product">
-        <img src="https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5/a71da6cd-b3f1-4675-b830-32e6aa531eea/dunk-low-schuh-fur-altere-j3ZLkD.png" />
+        <%= cl_image_tag shoe.image1.key, height: 300, width: 400, crop: :fill %>
         <div class="card-product-infos">
           <h2><%= shoe.model %></h2>
           <p><%= shoe.description %></p>
