--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -1,6 +1,13 @@
 <div class="container">
   <div class="container">
-    <img src="https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5/a71da6cd-b3f1-4675-b830-32e6aa531eea/dunk-low-schuh-fur-altere-j3ZLkD.png" />
+  <div>
+    <%= cl_image_tag( @shoe.image1.key, height: 300, width: 400, crop: :fill) if @shoe.image1.attached? %>
+    <%= cl_image_tag( @shoe.image2.key, height: 300, width: 400, crop: :fill) if @shoe.image2.attached? %>
+    <%= cl_image_tag( @shoe.image3.key, height: 300, width: 400, crop: :fill) if @shoe.image3.attached? %>
+    <%= cl_image_tag( @shoe.image4.key, height: 300, width: 400, crop: :fill) if @shoe.image4.attached? %>
+    <%= cl_image_tag( @shoe.image5.key, height: 300, width: 400, crop: :fill) if @shoe.image5.attached? %>
+  </div>
+
       <div class="card-product-infos" alt="some shoe">
     <h1><%= @shoe.model %> </h1>
     <h2><%= @shoe.description %></h2>
