--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -4,7 +4,8 @@
       <div class="card-product-infos" alt="some shoe">
     <h1><%= @shoe.model %> </h1>
     <h2><%= @shoe.description %></h2>
-    <h3><%= @shoe.address %></h3>
-    <h4><%= @shoe.price %></h4>
+    <h3>Location: <%= @shoe.address %></h3>
+    <h4>Price:<%= @shoe.price %> €</h4>
+    <h4>Size: <%= @shoe.size %> </h4>
   </div>
 </div>
