--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -15,4 +15,6 @@
     <h4>Price:<%= @shoe.price %> €</h4>
     <h4>Size: <%= @shoe.size %> </h4>
   </div>
+
+  <%= link_to 'Back to all the shoes', shoes_path %>
 </div>
