--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -14,6 +14,7 @@
     <h3>Location: <%= @shoe.address %></h3>
     <h4>Price:<%= @shoe.price %> €</h4>
     <h4>Size: <%= @shoe.size %> </h4>
+    <p>User: <%= @shoe.user.email %></p>
   </div>
 
   <%= link_to 'Back to all the shoes', shoes_path %>
