--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,2 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
 
-<% if user_signed_in? %>
-  <h2>Hello <%= current_user.email %></h2>
-  <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-<% else %>
-  <%= link_to "Sign up", new_user_registration_path %>
-  <br>
-  <%= link_to "Sign in", new_user_session_path %>
-<% end %>
+<%= render "pages/login" %>
