--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for [@shoe, @booking] do |f| %>
   <%= f.input  :pick_up_date %>
   <%= f.input  :return_date %>
+  <%= f.button :submit, class: 'btn btn-primary' %>
 <% end %>
