--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,7 +26,8 @@
     <%= f.input :description,
                 required: false,
                 autofocus: true %>
-    <%= f.input :profile_picture, as: :file %>
+    <%= f.input :profile_picture, as: :file,
+                required: true %>
   </div>
 
   <div class="form-actions">
