--- a/app/views/shoes/index.html.erb
+++ b/app/views/shoes/index.html.erb
@@ -1,11 +1,12 @@
 <h1>OBUVnB</h1>
 <h2>Flashy shoes for rent.</h2>
+<%= link_to 'Home', root_path %>
 
 <div class="flexbox">
   <% @shoes.each do |shoe| %>
       <div class="cards">
       <%= link_to shoe_path(shoe), class: "text-decoration-none" do %>
-        <div class="card-category" style="background-image: url(<%=cl_image_path shoe.image1.key%>);height=200px; background-size:fit">
+        <div class="card-category" style="background-image: url(<%=cl_image_path shoe.image1.key%>);height:300px;width:450px; background-size:cover">
         <br><%= shoe.model %> <%= shoe.price %> €
         </div>
       </div>
