--- a/app/assets/stylesheets/components/_thumbnail.scss
+++ b/app/assets/stylesheets/components/_thumbnail.scss
@@ -1,22 +1,20 @@
-.shoe-grid {
+.shoe-row-tbig, .shoe-row-tsmall {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
 .shoe-thumbnail {
   position: relative;
   margin-right: 3em;
-  transition: all 0.5s ease-in-out;
-  img {
+  .shoe-image {
     width: 10em;
     height: 10em;
     border-radius: 50%;
-    border: 0.3em solid lightgrey;
+    border: 0.3em solid white;
+    box-shadow: 10px -10px  rgba(0,0,0,0.6);
   }
-}
-
-.shoe-thumbnail:hover {
-  font-size: 40px;
-  z-index: 10;
 }
 
 .avatar {
@@ -35,5 +33,5 @@
 }
 
 .tsmall {
-  font-size: 7px;
+  font-size: 10px;
 }
