navbar-first-deploy

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,13 +1,15 @@
 .navbar {
   height: 100%;
-  width: 10%;
+  width: 7%;
   position: fixed;
   z-index: 1;
   top: 0;
-  left: 92%;
+  left: 93%;
   background-color: #D4D4D4;
+  background-size: cover;
   overflow-x: hidden;
   padding-top: 16px;
+  color:transparent;
 }
 
 .navbar a {
@@ -17,12 +19,18 @@
 }
 
 .navbar a img {
-  width: 50px;
+  height: 60px;
+  width: 60px;
   border-radius: 50%;
   border: 1px solid black;
 }
 
+.navbar a img:hover {
+  filter: invert(100%);
+  color: #D4D4D4;
+}
+
 .main-content {
-  margin-right: 8%;
+  margin-right: 3%;
   padding: 0px 10px;
 }
