--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+  <%= render "pages/navbar_partial" %>
     <div class="container">
       <%= yield %>
       <p class="notice"><%= notice %></p>
