--- a/app/views/pages/_login.html.erb
+++ b/app/views/pages/_login.html.erb
@@ -1,12 +1,11 @@
-<h1>OBUVnB</h1>
-<p>shoeshoeshoeshoes</p>
-
-<% if user_signed_in? %>
-  <%= cl_image_tag( current_user.profile_picture.key, height: 300, width: 200, crop: :fill) %>
-  <h2>Hello <%= current_user.first_name %></h2>
-  <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-<% else %>
-  <%= link_to "Sign up", new_user_registration_path %>
-  <br>
-  <%= link_to "Sign in", new_user_session_path %>
-<% end %>
+<div class="main-content">
+  <% if user_signed_in? %>
+    <%= cl_image_tag( current_user.profile_picture.key, height: 300, width: 200, crop: :fill) %>
+    <h2>Hello <%= current_user.first_name %></h2>
+    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+  <% else %>
+    <%= link_to "Sign up", new_user_registration_path %>
+    <br>
+    <%= link_to "Sign in", new_user_session_path %>
+  <% end %>
+</div>
