--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
+<%= render "pages/header_partial" %>
 <%= render "pages/navbar_partial" %>
 <%= render "pages/login" %>
-<br>
 <%= link_to 'Go check out all the shoes', shoes_path %>
+<%= render "pages/footer_partial" %>
