--- a/app/assets/stylesheets/components/_thumbnail.scss
+++ b/app/assets/stylesheets/components/_thumbnail.scss
@@ -9,11 +9,12 @@
   position: relative;
   margin-right: 3em;
   .shoe-image {
+    object-fit: cover;
     width: 10em;
     height: 10em;
     border-radius: 50%;
     border: 0.3em solid white;
-    box-shadow: 10px -10px  rgba(0,0,0,0.6);
+    box-shadow: 0 3px 3px rgba(0,0,0,0.2);
   }
 }
 
