--- a/app/assets/stylesheets/components/_flexbox.scss
+++ b/app/assets/stylesheets/components/_flexbox.scss
@@ -1,3 +1,15 @@
 .flexbox {
-  display: flex;
+  position: absolute;
+  display: flex !important;
+}
+
+#profile {
+  position: fixed;
+  margin-right: 100px;
+  z-index: 5;
+}
+
+#shoes {
+  position: sticky;
+  margin-left: 500px;
 }
