--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,14 +2,14 @@
   height: 100%;
   width: 7%;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   left: 93%;
-  background-color: #D4D4D4;
+  background: linear-gradient(0.33turn, #614e68, #e6c0f1);
   background-size: cover;
   overflow-x: hidden;
   padding-top: 16px;
-  color:transparent;
+  border-left: 2px solid black;
 }
 
 .navbar a {
@@ -19,15 +19,34 @@
 }
 
 .navbar a img {
-  height: 60px;
-  width: 60px;
+  height: 65px;
+  width: 65px;
   border-radius: 50%;
-  border: 1px solid black;
+  z-index: 0;
+  border: 2px solid #470d69;
 }
 
-.navbar a img:hover {
-  filter: invert(100%);
+.navbar a:hover {
+  opacity: 0.8;
+}
+
+.navbar a:hover img {
   color: #D4D4D4;
+  border: 2px solid #af6bd6;
+}
+
+.navbar a p {
+  margin-top: -18px;
+  margin-left: -22px;
+  color: #29110e;
+  text-shadow: 1px 1px #BBBDF6;
+  font-weight: 900;
+  z-index: 5;
+}
+
+.navbar a:hover p {
+  color: #9323d3;
+  text-shadow: 1px 2px white;
 }
 
 .main-content {
