--- a/app/views/pages/_login.html.erb
+++ b/app/views/pages/_login.html.erb
@@ -4,6 +4,7 @@
 <% if user_signed_in? %>
   <%= cl_image_tag( current_user.profile_picture.key, height: 300, width: 200, crop: :fill) %>
   <h2>Hello <%= current_user.first_name %></h2>
+  <h3><%= current_user.description %></h3>
   <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
 <% else %>
   <%= link_to "Sign up", new_user_registration_path %>
