--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,5 @@
   margin-right: 8%;
   padding: 120px 10px;
 }
-@import "components/thumbnail"
+@import "components/thumbnail";
+@import "components/helper";
