--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
-@import "components/buttons"
+@import "components/buttons";
 
 .main-content {
   margin-right: 8%;
