--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,10 +12,18 @@
 @import "components/index";
 @import "pages/index";
 @import "components/buttons";
-@import "components/inputbox";
+@import "components/infobox";
+@import "components/bookingcontainer";
 
 .main-content {
   margin-right: 8%;
   padding: 120px 10px;
+}
+.fullwidth {
+  width: 100%;
+}
+.extramargin {
+  width: auto;
+  margin-right: 120px;
 }
 @import "components/thumbnail"
