--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,13 @@
 .navbar {
+  display: flex;
+  flex-direction: column;
   height: 100%;
-  width: 7%;
+  max-width: 120px;
   position: fixed;
   z-index: 2;
   top: 0;
-  left: 93%;
+  right: 0;
   background: linear-gradient(0.33turn, #614e68, #e6c0f1);
-  background-size: cover;
   overflow-x: hidden;
   padding-top: 16px;
   border-left: 2px solid black;
