--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
 
-  <body class="bg-white">
+  <body class="bg-white fullwidth">
   <%= render "pages/navbar_partial" %>
-    <div class="container bg-white">
+    <div class="container bg-white extramargin">
       <%= yield %>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
