--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body class="bg-white">
-  <%= render "pages/navbar_partial" %>
+  <%= render "pages/header_partial" %>
     <div class="container bg-white">
       <%= yield %>
       <p class="notice"><%= notice %></p>
