--- a/app/views/shoes/index.html.erb
+++ b/app/views/shoes/index.html.erb
@@ -1,6 +1,3 @@
-<h1>OBUVnB</h1>
-
-<h2>Flashy shoes for rent.</h2>
 <div class="shoe-grid">
   <% shoes = @shoes.to_a %>
   <% count = 0 %>
@@ -11,7 +8,7 @@
     <% line = shoes.shift(snum) %>
       <% line.each do |shoe| %>
         <%= link_to shoe_path(shoe), class: "text-decoration-none" do %>
-        <div class="shoe-thumbnail <%= size %>">
+        <div class="shoe-thumbnail <%= size %> mr-5">
           <%= cl_image_tag shoe.user.profile_picture.key, class:"avatar" %>
           <%= cl_image_tag shoe.image1.key, class:"shoe-image" %>
         </div>
@@ -21,4 +18,3 @@
     <% count += 1 %>
   <% end %>
 </div>
-<%= link_to 'Add a new shoe', new_shoe_path %>
