--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -2,33 +2,42 @@
     <div class="row">
     <div class="col-2">
       <%= cl_image_tag( @shoe.user.profile_picture.key, height: 100, width: 100, crop: :fill, class: "round") %>
+      <p><%= @shoe.user.first_name %> <%= @shoe.user.last_name %></p>
     </div>
-      <div class="shoe-thumbnail thuge col-5">
+      <div class="shoe-thumbnail thuge col-5 pb-3">
         <%= cl_image_tag( @shoe.image1.key, height: 300, width: 300, crop: :fill, class: "shoe-image") %>
       </div>
       <div class="pt-5 col-5">
-      <p ><%= @shoe.model %></p>
-      <p ><%= @shoe.size %></p>
-      <p ><%= @shoe.price %></p>
-      <p ><%= @shoe.description %></p>
+      <h2><%= @shoe.model %></h2>
+      <p>size: <%= @shoe.size == @shoe.size.to_i ? @shoe.size.to_i : @shoe.size %></p>
+      <p>price per day: <%= @shoe.price %>€</p>
+      <p><%= @shoe.description %></p>
   </div>
     </div>
     <div class="row">
     <div class="col-5"></div>
     <div class="col-7 d-flex">
+    <% if @shoe.image2.attached? %>
       <div class="shoe-thumbnail tbig">
         <%= cl_image_tag( @shoe.image2.key, height: 300, width: 300, crop: :fill, class: "shoe-image") %>
       </div>
+    <% end %>
+    <% if @shoe.image2.attached? %>
       <div class="shoe-thumbnail tbig">
         <%= cl_image_tag( @shoe.image3.key, height: 300, width: 300, crop: :fill, class: "shoe-image") %>
       </div>
+      <% end %>
+      <% if @shoe.image2.attached? %>
       <div class="shoe-thumbnail tbig">
         <%= cl_image_tag( @shoe.image4.key, height: 300, width: 300, crop: :fill, class: "shoe-image") %>
       </div>
+      <% end %>
+      <% if @shoe.image2.attached? %>
       <div class="shoe-thumbnail tsmall">
         <%= cl_image_tag( @shoe.image5.key, height: 300, width: 300, crop: :fill, class: "shoe-image") %>
       </div>
+      <% end %>
       </div>
     </div>
-  <%= link_to 'Back to all the shoes', shoes_path %>
+  <%= link_to 'Rent this shoe',  new_shoe_booking_path(@shoe), class:"btn btn-primary" %>
 </div>
