--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
   </head>
 
   <body class="bg-white fullwidth">
-  <%= render "pages/navbar_partial" %>
-    <div class="container bg-white extramargin">
+  <%= render "pages/header_partial" %>
+    <div class="container extramargin main-content">
       <%= yield %>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
