--- a/app/assets/stylesheets/components/_flexbox.scss
+++ b/app/assets/stylesheets/components/_flexbox.scss
@@ -22,7 +22,7 @@
   color: #470d69;
 }
 
-.user-profile {
+.user-profile, .purpletitle {
   width: 400px;
   text-align: center;
   font-weight: 700;
