--- a/app/assets/stylesheets/components/_thumbnail.scss
+++ b/app/assets/stylesheets/components/_thumbnail.scss
@@ -41,10 +41,11 @@
     z-index: 5;
     right: -1em;
     top: 6.5em;
+    object-fit: cover;
 }
 
 .thuge {
-  font-size: 25px;
+  font-size: 30px;
 }
 
 .tbig {
@@ -64,9 +65,9 @@
 }
 
 .tbig{
-  font-size: 15px;
+  font-size: 20px;
 }
 
 .tsmall {
-  font-size: 10px;
+  font-size: 15px;
 }
