--- a/app/assets/stylesheets/components/_bookingcontainer.scss
+++ b/app/assets/stylesheets/components/_bookingcontainer.scss
@@ -1,15 +1,35 @@
-.bookingcontainer {
+.bookingcontainer  {
   display: inline-flex;
+  width: 100%;
   justify-content: space-between;
   margin-top: 20%;
+  padding: 0px 100px;
 }
 
-.picdesc {
-  flex: 1;
+.imgcontainer {
+  display: flex;
+  flex: 2;
+  flex-direction: column;
+  margin-top: 40px;
 }
 
-.shoepic {
-  width: 200px;
-  height: 200px;
+.shoeimg {
+  width: 300px;
+  height: 300px;
+  border: #9c9c9c 0.5px solid;
   border-radius: 50%;
+  margin-right: 20px;
+  margin-top: -50px;
+}
+
+.ownerimg, .userimg {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  z-index: 10;
+}
+
+.userimg {
+  margin-left: 200px;
+  margin-top: -50px;
 }
