--- a/app/views/pages/_header_partial.html.erb
+++ b/app/views/pages/_header_partial.html.erb
@@ -3,7 +3,11 @@
   <a href="#"><%= image_tag ("/assets/logo.png") %></a>
 
 <div class="navbar">
-  <div><%= link_to profile_path do %><%= cl_image_tag( current_user.profile_picture.key ) unless current_user == nil  %><p>PROFILE</p><% end %></div>
+  <div><%= link_to profile_path do %><%= cl_image_tag( current_user.profile_picture.key ) unless current_user == nil  %><p>PROFILE</p><% end %><ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+    <li><a class="dropdown-item" href="#">Action</a></li>
+    <li><a class="dropdown-item" href="#">Another action</a></li>
+    <li><a class="dropdown-item" href="#">Something else here</a></li>
+  </ul></div>
   <br>
   <%= link_to shoes_path do %><%= cl_image_tag( Shoe.first.image1.key ) %><p>ALLshoes</p><% end %>
   <br>
