--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body class="bg-white fullwidth">
   <%= render "pages/header_partial" %>
-    <div class="container extramargin main-content">
+    <div class="container main-content">
       <%= yield %>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
