--- a/app/assets/stylesheets/components/_bookingcontainer.scss
+++ b/app/assets/stylesheets/components/_bookingcontainer.scss
@@ -2,7 +2,7 @@
   display: inline-flex;
   width: 100%;
   justify-content: space-between;
-  margin-top: 20%;
+  margin-top: 30px;
   padding: 0px 50px;
 }
 
