--- a/app/assets/stylesheets/components/_infobox.scss
+++ b/app/assets/stylesheets/components/_infobox.scss
@@ -27,7 +27,7 @@
 }
 
 .totalprice {
-  padding: 14px;
+  padding: 20px;
   padding-bottom: 10px;
   margin-top: 20px;
   border-top: #888888 1px dashed;
@@ -37,4 +37,9 @@
   font-size: 10px;
   color: #888888;
   text-align: center;
+}
+
+.key {
+  display: flex;
+  flex: 1;
 }
