--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -11,8 +11,8 @@
     <div class='row'><div class="key">Model:</div> <div class='value'><%= @booking.shoe.model %></div></div>
     <div class='row'><div class="key">Size:</div> <div class='value'><%= @booking.shoe.size %></div></div>
     <div class='row'><div class="key">Daily price for shoe:</div> <div class='value'>€<%= @booking.shoe.price %></div></div>
-    <div class='row'><div class="key">From:</div><div class='value'><%= @booking.pick_up_date %></div></div>
-    <div class='row'><div class="key">To:</div><div class='value'><%= @booking.return_date %></div></div>
+    <div class='row'><div class="key">From:</div><div class='value'><%= @booking.pick_up_date.strftime("%d.%m.%Y") %></div></div>
+    <div class='row'><div class="key">To:</div><div class='value'><%= @booking.return_date.strftime("%d.%m.%Y") %></div></div>
     <div class='row totalprice'><div class="key">Total price:</div> <div class='value'>€<%= @booking.total_price %></div></div>
     <div class="disclaimer">Please contact <%= @booking.shoe.user.email %> for any questions.</div>
   </div>
