--- a/app/views/shoes/_form_partial.html.erb
+++ b/app/views/shoes/_form_partial.html.erb
@@ -1,4 +1,5 @@
 
+<div class="container">
 <%= simple_form_for @shoe do |f| %>
   <%= f.input  :model %>
   <%= f.input  :size %>
@@ -13,3 +14,4 @@
 
   <%= f.button :submit, class: "btn btn-primary" %>
 <% end %>
+</div>
