--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -40,4 +40,9 @@
       </div>
     </div>
   <%= link_to 'Rent this shoe',  new_shoe_booking_path(@shoe), class:"btn btn-primary" %>
+  <%
+=begin%>
+ <%= link_to 'Edit this shoe',  edit_shoe_path(@shoe), class:"btn btn-primary" %>
+<%
+=end%>
 </div>
