booking index and fake method

--- a/app/views/pages/_header_partial.html.erb
+++ b/app/views/pages/_header_partial.html.erb
@@ -15,6 +15,8 @@
   <br>
   <%= link_to new_shoe_path do %><p class="nav-p">ADDshoes</p><% end %>
   <br>
+  <%= link_to bookings_path do %><p class="nav-p">bookings</p><% end %>
+  <br>
   <%= link_to about_path do %><p class="nav-p">ABOUT</p><% end %>
 </div>
 
