--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   </head>
 
   <body class="bg-white fullwidth">
+  <%= render '/shared/flashes' %>
   <%= render "pages/header_partial" %>
     <div class="container main-content">
       <%= yield %>
