--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -5,7 +5,7 @@
       <p class="purpletext"><%= @shoe.user.first_name %> <%= @shoe.user.last_name %></p>
     </div>
       <div class="shoe-thumbnail thuge col-5 pb-3">
-        <%= cl_image_tag( @shoe.image1.key, height: 300, width: 300, crop: :fill, class: "shoe-image") %>
+        <%# <%= cl_image_tag( @shoe.image1.key, height: 300, width: 300, crop: :fill, class: "shoe-image") %> %>
       </div>
       <div class="pt-5 col-5">
       <h2 class="purpletitle"><%= @shoe.model %></h2>
@@ -17,26 +17,7 @@
     <div class="row">
     <div class="col-5"></div>
     <div class="col-7 d-flex">
-    <% if @shoe.image2.attached? %>
-      <div class="shoe-thumbnail tbig">
-        <%= cl_image_tag( @shoe.image2.key, height: 300, width: 300, crop: :fill, class: "shoe-image") %>
-      </div>
-    <% end %>
-    <% if @shoe.image3.attached? %>
-      <div class="shoe-thumbnail tbig">
-        <%= cl_image_tag( @shoe.image3.key, height: 300, width: 300, crop: :fill, class: "shoe-image") %>
-      </div>
-      <% end %>
-      <% if @shoe.image4.attached? %>
-      <div class="shoe-thumbnail tbig">
-        <%= cl_image_tag( @shoe.image4.key, height: 300, width: 300, crop: :fill, class: "shoe-image") %>
-      </div>
-      <% end %>
-      <% if @shoe.image5.attached? %>
-      <div class="shoe-thumbnail tsmall">
-        <%= cl_image_tag( @shoe.image5.key, height: 300, width: 300, crop: :fill, class: "shoe-image") %>
-      </div>
-      <% end %>
+
       </div>
     </div>
   <%= link_to 'Rent this shoe',  new_shoe_booking_path(@shoe), class:"btn btn-primary" %>
