--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,9 +15,9 @@
 @import "components/buttons";
 @import "components/infobox";
 @import "components/bookingcontainer";
+@import "components/bookingindex";
 
 .main-content {
-  margin-right: 8%;
   padding: 120px 0;
 }
 .fullwidth {
