--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -24,8 +24,8 @@
     <h3> Book this shoes: </h3>
     <% if current_user.id != @shoe.user_id  %>
        <%= simple_form_for([@shoe, @booking]) do |f| %>
-           <%= f.input :pick_up_date, as: :string, type: :text %>
-           <%= f.input :return_date, as: :string, type: :text %>
+           <%= f.input :pick_up_date, as: :string, input_html: {class: "datepicker"} %>
+           <%= f.input :return_date, as: :string, input_html: {class: "datepicker"}  %>
            <%= f.submit "Book", class: "btn bookingbtn" %>
         <% end %>
     <% end %>
