--- a/app/views/shoes/_user_shoes.html.erb
+++ b/app/views/shoes/_user_shoes.html.erb
@@ -12,7 +12,7 @@
         <%= link_to shoe_path(shoe), class: "text-decoration-none" do %>
         <div class="shoe-thumbnail-profile <%= size %>">
           <p class="model"><%= shoe.model %></p>
-          <%= cl_image_tag shoe.image1.key, class:"shoe-image-profile" %>
+          <%= cl_image_tag shoe.images[0].key, class:"shoe-image-profile" %>
         </div>
         <% end %>
      <% end %>
