--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -6,7 +6,7 @@
       <% @bookings.each do |booking| %>
       <ul>
         <%= link_to booking_path(booking) do %>
-        <%= cl_image_tag booking.shoe.image1.key, class:'bookingimg' %>  <%= booking.shoe.model %>
+        <%= cl_image_tag booking.shoe.image1.key, class:'bookingimg' %>  <%= booking.shoe.model %> <p class= "status"><%= booking.status %></p>
         <% end %>
       </ul>
       <% end %>
@@ -18,6 +18,7 @@
         <div class='eachbooking'>
           <div class='eachimg'>
             <%= cl_image_tag booking.shoe.image1.key, class:'bookedimg' %>
+            <p style="font-size: smaller;">Status:</p><p class= "status"><%= booking.status %></p>
           </div>
           <div class='eachdescription'>
             <p>Model: <%= booking.shoe.model %></p>
