still working on it

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,8 +17,7 @@
 @import "components/bookingcontainer";
 
 .main-content {
-  margin-right: 8%;
-  padding: 120px 0;
+  padding: 20px;
 }
 .fullwidth {
   width: 100%;
