--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -16,7 +16,7 @@
            <%= f.submit "Book", class: "btn bookingbtn" %>
         <% end %>
       <% else %>
-      <h3>You can not book your own shoe</h3>
-      <h3>Have a nice day!</h3>
+      <p><strong>You cannot book your own shoe</strong></p>
+      <p>Have a nice day!</p>
     <% end %>
  </div>
